--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,5 +1,5 @@
 <ul>
   <li *ngFor="let product of products">
-{{product.albumName}}
+<a href="routerLink" rel ="routerLinkActive">{{product.albumName}}</a>
   </li>
 </ul>
